<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/university_logo"
        android:src="@drawable/uc_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/uc_reporting"
        android:textAllCaps="true"
        android:textColor="@color/pale_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system"
        android:textColor="@color/pale_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_black"
        android:letterSpacing="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login_card"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/pale_yellow"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_system"
        app:layout_constraintVertical_bias="0.2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_black"
                android:text="@string/welcome_back"
                android:textColor="@color/uc_green"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/please_sign_in"
                android:textColor="@color/uc_green"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="276dp"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/montserrat_light_italic"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruction" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="276dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/montserrat_light_italic"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/forest_green"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />


            <LinearLayout
                android:id="@+id/ll_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login">

                <TextView
                    android:id="@+id/tv_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_account"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="0dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/bright_green"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_emergency_report"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/emergency_report"
                android:textAllCaps="false"
                android:textColor="@color/bright_red"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_create_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>