<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/olive_green">

        <View
            android:id="@+id/v_header_background"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu_icon"
            app:tint="@color/uc_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/ucrs_logo"
            android:src="@drawable/uc_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_about_us_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/v_header_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/btn_back_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" >
                    <ImageView
                        android:id="@+id/iv_back_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/right_icon"
                        android:contentDescription="@string/back_icon"
                        android:rotation="180"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/back"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_medium"
                        android:textSize="15sp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_about_us_description_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="@color/ashy_cyan">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/tv_about_us_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us"
                            android:textColor="@color/uc_green"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:id="@+id/tv_about_us_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="25dp"
                            android:paddingEnd="25dp"
                            android:text="@string/about_us_description"
                            android:textSize="14sp"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/uc_green"
                            android:lineSpacingExtra="2dp"
                            android:gravity="center_horizontal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_pvm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="20dp"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:checkedButton="@id/btn_purpose"
                    app:toggleCheckedStateOnClick="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_purpose"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/purpose"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/forest_green"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_vision"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vision"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/uc_green"
                        android:backgroundTint="@color/ashy_cyan"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_mission"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mission"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/uc_green"
                        android:backgroundTint="@color/ashy_cyan"
                        app:cornerRadius="10dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <TextView
                    android:id="@+id/tv_dynamic_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_purpose_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="-20dp"
                    android:elevation="4dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/rounded_title_bg" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_dynamic_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="@color/ashy_cyan">

                    <TextView
                        android:id="@+id/tv_dynamic_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="50dp"
                        android:text="@string/our_purpose"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/uc_green"
                        android:gravity="center"
                        android:lineSpacingExtra="3dp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="210dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/pale_yellow"
        app:headerLayout="@layout/nav_header_student"
        app:menu="@menu/drawer_menu"
        app:itemIconTint="@color/uc_green"
        app:itemTextColor="@color/uc_green"
        app:itemIconPadding="24dp"
        app:itemTextAppearance="@style/NavigationDrawerTextStyle"/>

</androidx.drawerlayout.widget.DrawerLayout>